--- a/css/style.css
+++ b/css/style.css
@@ -150,8 +150,20 @@ hr{
 foo
 /* Resposive */
 
-@media only screen and (max-width: 600px) {
-    body {
-      background-color: rgb(12, 3, 44);
+
+@media only screen and (min-width:688px ) and (max-width:992px) {
+
+    .container{
+        width: 100%;
     }
-}
+
+     .packages{
+        grid-template-columns: repeat(2, 1fr);
+
+
+    }
+
+    .services{
+        grid-template-columns: repeat();
+    }
+    
