--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,6 @@ foo
     }
 
     .services{
-        grid-template-columns: repeat();
+        grid-template-columns: repeat(1,1fr);
     }
     
