--- a/css/style.css
+++ b/css/style.css
@@ -147,23 +147,43 @@ hr{
     color: white;
 }
 
-foo
-/* Resposive */
+
+/* Mobile-Resposive */
+
+@media only screen and (max-width: 600px) {
 
 
-@media only screen and (min-width:688px ) and (max-width:992px) {
+    .container {
 
-    .container{
         width: 100%;
-    }
-
-     .packages{
-        grid-template-columns: repeat(2, 1fr);
-
 
     }
 
-    .services{
-        grid-template-columns: repeat(1,1fr);
+    packages{
+        grid-template-columns: repeat(1, 1fr);
+
+
     }
+
+  }
+
+    /* tablet-responsive */
+
+    @media only screen and (min-width: 768px){
+
+
+        .container{
+            width: 100%;
+        }
+    
+         .packages{
+            grid-template-columns: repeat(2, 1fr);
+    
+    
+        }
+    
+        
+    }
+
+
     
