--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ hr{
 
     /* tablet-responsive */
 
-    @media only screen and (min-width: 768px){
+    @media only screen and (max-width: 768px){
 
 
         .container{
